# agentic-popup-shop

./: .env.example  .env.template  .gitignore  README.md  apphost.cs  apphost.run.json  docker-compose.yml  locustfile.py  pyproject.toml  pytest.ini  test_localization_structure.py
.aspire/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  postCreateCommand.sh
app/: .dockerignore  Dockerfile.api  Dockerfile.financemcp  Dockerfile.mcp
app/agents/: demo.py  examples.txt  pyproject.toml  test_proposal.md
app/agents/src/github_shop_agents/: mage.py  stock.py
app/agents/src/zava_shop_agents/: __init__.py  __main__.py  admin_insights.py  batch.py  insights.py  insights_cache.py  mage.py  marketing.py  stock.py  supplier_review.py
app/api/: .gitignore  pyproject.toml
app/api/src/github_shop_api/: app.py
app/api/src/zava_shop_api/: app.py  auth.py  chat_router.py  chatkit_router.py  customers.py  memory_store.py  models.py
app/api/src/zava_shop_api/routers/: OLD_CHAT_UI.py  marketing.py
app/api/tests/: README.md  __init__.py  conftest.py
app/api/tests/api/: test_auth_token_store.py  test_authentication.py  test_categories.py  test_chatkit.py  test_chatkit_integration.py  test_health.py  test_management_dashboard.py  test_management_inventory.py  test_management_products.py  test_management_suppliers.py  test_products.py  test_stores.py  test_user_orders.py  test_user_profile.py
app/data/: README.md  pyproject.toml
app/data/database/: README.md  generate_github_sqlite_sqlalchemy.py  requirements.txt
app/data/database/postrgres/: RLS_USER_GUIDE.md  generate_github_postgres.py  github_retail_schema.sql
app/data/database/reference_data/: stores_reference.json  supplier_data.json
app/data/src/zava_shop_datagenerator/: __main__.py
app/data/src/zava_shop_datagenerator/data_prep/: add_description_embeddings.py  add_image_embeddings.py  add_product.py  count_products.py  format_embeddings.py  image_generation.py
app/data/src/zava_shop_datagenerator/reference_data/: product_data.json  seasonal_multipliers.json  stores_reference.json
app/mcp/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
app/mcp/src/github_shop_mcp/: finance_server.py  supplier_server.py
app/mcp/src/zava_shop_mcp/: finance_server.py  models.py  supplier_server.py
app/mcp/tests/: conftest.py
app/mcp/tests/integration/: test_finance_server.py  test_supplier_server.py
app/shared/: pyproject.toml
app/shared/src/github_shop_shared/: config.py  finance_sqlite.py  supplier_sqlite.py
app/shared/src/zava_shop_shared/: config.py  finance_postgres.py  finance_sqlite.py  health_check.py  supplier_postgres.py  supplier_sqlite.py
app/shared/src/zava_shop_shared/models/postgres/: README.md  __init__.py  approvers.py  base.py  categories.py  company_policies.py  customers.py  inventory.py  notifications.py  order_items.py  orders.py  procurement_requests.py  product_embeddings.py  product_types.py  products.py  stores.py  supplier_contracts.py  supplier_performance.py  suppliers.py
app/shared/src/zava_shop_shared/models/sqlite/: README.md  __init__.py  approvers.py  base.py  categories.py  company_policies.py  customers.py  inventory.py  notifications.py  order_items.py  orders.py  procurement_requests.py  product_types.py  products.py  stores.py  supplier_contracts.py  supplier_performance.py  suppliers.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  dotnet-install.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: env.js
frontend/public/images/products/: README.md
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AppFooter.vue  AppHeader.vue  CustomerChat.vue  ManagementHeader.vue  MarketingHeader.vue  ProductCard.vue  SimpleChatWindow.vue
frontend/src/components/marketing/: CampaignDetails.vue  CampaignMessage.vue  ChatBox.vue  EditableMarkdown.vue
frontend/src/composables/: useWebSocket.js
frontend/src/config/: api.js  management.js
frontend/src/router/: index.js
frontend/src/services/: api.js  customer.js  management.js
frontend/src/stores/: auth.js
frontend/src/views/: CategoryPage.vue  CustomerDashboard.vue  HomePage.vue  LoginPage.vue  ManagementLayout.vue  MarketingDashboard.vue  MarketingLayout.vue  ProductPage.vue  StoresPage.vue
frontend/src/views/management/: AIAgentPage.vue  DashboardPage.vue  InventoryPage.vue  PoliciesPage.vue  ProductDetailPage.vue  ProductsPage.vue  SuppliersPage.vue
