[project]
name = "zava-shop-datagenerator"
version = "0.1.0"
description = "A data generator for the shop application"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "aiosqlite>=0.20.0,<0.21.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "faker==37.11.0",
    # local editable packages
    "zava-shop-shared",
]

[tool.uv.sources]
zava-shop-shared = { path = "../shared", editable = true }

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
